updated banner to stop text overflow (#1790)
when the main column element reaches its max width, the text now stop expanding.

--- a/curiositymachine/static/less/banners.less
+++ b/curiositymachine/static/less/banners.less
@@ -37,3 +37,15 @@
   text-shadow: #ffabac 0.3vw 0.3vw 0px;
   color: #b80000;
 }
+@media screen and (min-width: 1190px) {
+  .ai-banner .ai-banner-font-primary {
+     font-size: 40px;
+  }
+  .ai-banner .ai-banner-font-secondary {
+     font-size: 21px;
+     margin-top: -37px;
+  }
+  .ai-banner {
+     height: 120px;
+  }
+}
